<resources>
    <string name="app_name">FitnessTracker</string>
    <string name="start_workout">Start Workout</string>
    <string name="history">History</string>
    <string name="settings">Settings</string>
    <string name="title_activity_workout">Workout</string>
    <string name="start">Start</string>
    <string name="press_to_start_workout">Press to start workout!</string>
    <string name="exercise_name">Exercise name</string>
    <string name="repetitions">Repetitions</string>
    <string name="sets">Sets</string>
    <string name="weight">Weight</string>
    <string name="time">Time</string>
    <string name="speed">Speed</string>
    <string name="rest_time">Rest time</string>
    <string name="done">Done</string>
    <string name="add_exercise">Add Exercise</string>
    <string name="exercise_weight">Exercise Weight</string>
    <string name="number_of_sets">Number of Sets</string>
    <string name="number_of_reps">Number of Reps</string>
    <string name="add">+</string>
    <string name="done_n_save"><![CDATA[Done & Save!]]></string>
    <string name="no_workout">No Workout</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="editRest">Rest Time</string>

    <!-- TODO: implement this-->
    <string-array name="muscle_type_array">
        <item>Arms</item>
        <item>Back</item>
        <item>Cardio</item>
        <item>Chest</item>
        <item>Full Body</item>
        <item>Glutes</item>
        <item>Legs</item>
        <item>Shoulders</item>
    </string-array>
</resources>
