<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ishen.fitnesstracker.AddActivity">

    <Spinner
        android:id="@+id/choose_exercise_sp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="30dp"/>

    <EditText
        android:id="@+id/editWeight"
        style="@style/AddActivityEditableText"
        android:layout_below="@id/choose_exercise_sp"
        android:layout_marginTop="10dp"
        android:hint="@string/exercise_weight" />

    <EditText
        android:id="@+id/editSet"
        style="@style/AddActivityEditableText"
        android:layout_below="@id/editWeight"
        android:layout_marginTop="10dp"
        android:hint="@string/number_of_sets"/>

    <EditText
        android:id="@+id/editRep"
        style="@style/AddActivityEditableText"
        android:layout_below="@id/editSet"
        android:layout_marginTop="10dp"
        android:hint="@string/number_of_reps"/>

    <!-- TODO: change time, reps and sets to spinner with numbers-->
    <EditText
        android:id="@+id/editTime"
        style="@style/AddActivityEditableText"
        android:layout_below="@id/editRep"
        android:layout_marginTop="10dp"
        android:hint="@string/time"/>

    <EditText
        android:id="@+id/editSpeed"
        style="@style/AddActivityEditableText"
        android:layout_below="@id/editTime"
        android:layout_marginTop="10dp"
        android:hint="@string/speed"/>

    <Button
        android:id="@+id/button_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_exercise"
        android:layout_marginBottom="40dp"
        android:visibility="invisible"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="19dp" />

    <Button
        android:id="@+id/button_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/button_add"
        android:layout_toEndOf="@+id/editRep"
        android:visibility="invisible"
        android:text="view workout" />

</RelativeLayout>
