<?xml version="1.0" encoding="utf-8"?>

<!--android.support.constraint.ConstraintLayout-->
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ishen.fitnesstracker.Home">

    <Button
        android:id="@+id/button"
        style="@style/HomeButton"
        android:text="@string/start_workout"
        android:layout_alignParentStart="true"/>

    <Button
        android:id="@+id/button2"
        android:text="@string/history"
        style="@style/HomeButton"
        android:layout_toEndOf="@+id/button"/>

    <Button
        android:id="@+id/button3"
        android:text="Button"
        style="@style/HomeButton"
        android:layout_below="@+id/button"/>

    <Button
        android:id="@+id/button4"
        android:text="@string/settings"
        style="@style/HomeButton"
        android:layout_toEndOf="@+id/button3"
        android:layout_below="@+id/button2"/>

</RelativeLayout>
